--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
     "cookie-session": "^1.2.0",
@@ -16,6 +17,8 @@
     "mongoose": "^4.4.12",
     "morgan": "~1.6.1",
     "nodemon": "^1.9.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-alpha3",
     "serve-favicon": "~2.3.0"
   }
